Sidebar UI fixed  z-index

--- a/app/src/scss/options-sidebar.scss
+++ b/app/src/scss/options-sidebar.scss
@@ -11,7 +11,7 @@
         top: 0;
         user-select: none;
         width: 48rem;
-        z-index: 103;   
+        z-index: 9999;   
         
 
         &.v-enter-active,
